# Program-MSU

./: .gitignore  .gitmodules  README.md
C++/: Fibonacci.cpp  Queen.cpp  a.out  test1.cpp
C++_ANALYSIS/: 9_3.py  Cauchy_problem.cpp  Differential.equation.cpp  Integral_equation.cpp  Integral_equation_kind_1.cpp  Integral_equation_kind_2.cpp  integral.cpp  matrix.cpp  matrix_Householder.cpp  matrix_iteration.cpp  matrix_iteration_tr.cpp  min_Grad.cpp  min_Newton.cpp  temp.py
C++_CLASS_TEST/: Client_Database.cpp  Server_Database.cpp  Table.c  Table.h  ourtest.txt  shape.cpp  shape.h  t.cpp  test1.cpp  test10.cpp  test11.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test3.cpp  test6.cpp  test7.cpp  test8.cpp
C++_HPC/: bsort.cpp  parallel_sort_new.cpp
C++_LIBRARY/: LogUtils.cc  LogUtils.h
C++_TASKBOOK/: B14.c  color.cpp  color.h  main.cpp  taskchecker.c
CA_PP/: sort_three.c
C_CLASS_TEST/: .test64.c.swp  a.out  test103.c  test104.c  test105.c  test107.c  test108.c  test112.c  test113.c  test114.c  test116.c  test122.c  test124.c  test127.c  test133.c  test14.c  test16.c  test2.c  test20.c  test21.c  test24.c  test25.c  test27.c  test28.c  test29.c  test32.c  test33.c  test34.c  test35.c  test36.c  test38.c  test4.c  test40.c  test47.c  test48.c  test5.c  test51.c  test52.c  test53.c  test54.c  (+32 more)
MODEL_CHECKING/PRAC/TASK1/: CMakeLists.txt  README.md  run.sh  test.sh
MODEL_CHECKING/PRAC/TASK1/inc/: fsm.hpp  ltl.hpp  translator.hpp
MODEL_CHECKING/PRAC/TASK1/src/: fsm.cpp  ltl.cpp  translator.cpp
MODEL_CHECKING/PRAC/TASK1/test/: test.cpp
R/: 5.R  9.1.R  (+13 more)
(+1298 files in other folders)
